--- a/casamento.html
+++ b/casamento.html
@@ -80,7 +80,7 @@
         <h2>Fotos de Casamento</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="images/casamento1.jpg" alt="Casamento 1">
+                <img src="letra.jpeg.jpg" alt="Casamento 1">
                 <p>Casamento 1</p>
             </div>
             <div class="gallery-item">
