--- a/casamento.html
+++ b/casamento.html
@@ -106,7 +106,7 @@
         <h2>Fotos de Casamento</h2>
         <div class="gallery">
             <div class="gallery-item">
-                <img src="images/casamento1.jpg" alt="Casamento 1">
+                <img src="letra.jpeg" alt="Casamento 1">
                 <div class="watermark">
                     <span>OneShot</span>
                     <span>OneShot</span>
