--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <header>
-        <h1>Galeria - Rafael</h1>
+        <h1>OneShot</h1>
     </header>
     <nav>
         <a href="index.html">Início</a>
