--- a/casamento.html
+++ b/casamento.html
@@ -90,6 +90,15 @@
         document.addEventListener('contextmenu', function(e) {
             e.preventDefault();
         });
+        <script>
+    // Desabilitar arrastar e soltar em todas as imagens
+    document.querySelectorAll('img').forEach(img => {
+        img.addEventListener('dragstart', (e) => {
+            e.preventDefault();
+        });
+    });
+</script>
+
     </script>
 </head>
 <body>
