--- a/casamento.html
+++ b/casamento.html
@@ -85,20 +85,20 @@
             margin-top: 20px;
         }
     </style>
-    <script>
+     <script>
         // Desabilitar o clique com o botão direito do mouse
         document.addEventListener('contextmenu', function(e) {
             e.preventDefault();
         });
 
         // Desabilitar arrastar e soltar em todas as imagens
-    document.querySelectorAll('img').forEach(img => {
-        img.addEventListener('dragstart', (e) => {
-            e.preventDefault();
+        document.addEventListener('DOMContentLoaded', function() {
+            document.querySelectorAll('img').forEach(img => {
+                img.addEventListener('dragstart', (e) => {
+                    e.preventDefault();
+                });
+            });
         });
-    });
-});        
-
     </script>
 </head>
 <body>
